# PulmoScanX

./: .env  .gitignore  config.py  main.py  pyproject.toml
datasets/: extract_images.py
notebooks/: corr.csv  data_transformation.ipynb  sam.ipynb  segmentation_model.ipynb  training.ipynb  training_classification_with_mask.ipynb  training_group1.ipynb  training_hybrid_classical.ipynb  training_segmentation_model.ipynb
seg_utils/: chebConv.py  data_postprocess.py  data_preprocess.py  plotting.py
src/: dataset.py
utils/: dataset.py  evaluate.py  model.py  train.py  transform.py  transform_kornia.py  u-efficientnet.py
